fixed a few layout bugs in mvp section

--- a/source/sections.scss
+++ b/source/sections.scss
@@ -112,4 +112,4 @@ MVP / Prototypes
 
 .mvp #travel .mvp-travel-hero { background-image: url('../images/travel/home_large.png'); background-size: cover; border: 1px solid grey;  height: 250px; width: 475px; margin-top: 10px;}
 .mvp #travel .mvp-travel-stack { background-image: url('../images/travel/stack_large.png'); height: 104px; width: 813px; margin: 0 auto; margin-bottom: 20px;}
-.mvp #travel .mvp-travel-messages { background-image: url('../images/travel/map_large.png'); background-size: cover; border: 1px solid grey;  height: 430px; width: 475px;}
+.mvp #travel .mvp-travel-features { background-image: url('../images/travel/map_large.png'); background-size: cover; border: 1px solid grey;  height: 265px; width: 475px;}
